--- a/todoList/public/index.html
+++ b/todoList/public/index.html
@@ -11,51 +11,91 @@
 </head>
 <body>
   <div class="container" ng-controller="AppCtrl">
-    <h1>Todo List App</h1>
 
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>         
-      <!--
-          <th>Email</th>
-          <th>Number</th>
-       -->
-          <th> Date</th>
-          <th>&nbsp;</th>
-          <th>Action</th>
-          
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><input class="form-control" ng-model="todo.name"></td>
-          <td><input class="form-control" ng-model="todo.date"></td>
-          <td ng-model = "todo.complete" ng-value="false"></td>
-          
-      <!--
-          <td><input class="form-control" ng-model="todo.email"></td>
-          <td><input class="form-control" ng-model="todo.number"></td>
-          -->
-          <td><button class="btn btn-primary" ng-click="addTodo()">Add Contact</button></td>
-          <td><button class="btn btn-info" ng-click="update(todo.id)">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselect()">Clear</button></td>
-        </tr>
-        <tr ng-repeat="todo in todoList">
-          <td>{{todo.name}}</td>
-          <td>{{todo.date}}</td>
-          <td><label> Complete <input type="checkbox" ng-model="todo.complete" ng-true-value ="true" ng-false-value="false" ng-click="complete(todo)"></label>  </td>
-      <!--
-          <td>{{todo.email}}</td>
-          <td>{{todo.number}}</td>
-       -->   
-          <td><button class="btn btn-danger" ng-click="remove(todo._id)">Remove</button></td>
-          <td><button class="btn btn-warning" ng-click="edit(todo._id)">Edit</button></td>
-        </tr>
-      </tbody>
-    </table>
+    <!-- Page Header -->
+  <div class="page-header">
+    <h1>
+      Todo List App
+      <small>
+        <span id="remaining">{{remaining}}</span>
+        of
+        <span id="total">{{total}}</span>
+        remaining
+        <small>[<button type="button" class="btn btn-link" ng-click="resetTodo()">Reset</button>]</small>
+      </small>
+    </h1>
+  </div>
+
+
+  <div class="form-group row">
+    <div class="col-md-7">
+      <label class="sr-only" for="description">Todo Description</label>
+      <input type="text" class="form-control" name="description" placeholder="Enter todo description" ng-model="todo.description">
+    </div>
+
+    <div class="col-md-2">  
+      <label class="sr-only" for="date">Todo Date</label>
+      <input type="date" class="form-control" name="date" ng-model="todo.date">
+    </div>
+
+    <div class="col-md-3">  
+    <button class="btn btn-primary" ng-click="addTodo()">Add Todo</button>
+      <button class="btn btn-info" ng-click="update(todo.id)">Update</button>
+      <button class="btn btn-info" ng-click="deselect()">Clear</button>
+    </div>
 
   </div>
+
+
+  <div class="jumbotron" ng-if ="total == 0">
+    <h1>Uh-Oh! <small>There are no tasks to display.</small></h1>
+  </div>
+
+
+
+  <table class="table table-hover table-striped table-bordered" ng-if ="total != 0">
+    <thead>
+      <tr>
+        <th>Task</th>
+        <th>Date</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="todo in todoList">          
+        <td ng-if="!todo.done">
+          {{todo.description}}          
+        </td>
+        <td ng-if="todo.done">
+          <s>{{todo.description}}</s>                     
+        </td>
+        <td>
+          {{todo.date | date}}
+        </td>
+        <td>
+
+
+
+
+          <button class="btn btn-warning" ng-if="todo.done" ng-click="markNotDone(todo._id)">Mark as Not Done</button>
+
+          <button class="btn btn-info" ng-if="!todo.done" ng-click="markDone(todo._id)">Mark as Done</button>
+
+          <button class="btn btn-warning" ng-click="edit(todo._id)">Edit</button>
+
+          <button class="btn btn-danger" ng-click="remove(todo._id)">Remove</button>
+
+
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  
+
+
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
 <script src="controllers/controller.js"></script>
 </body>
+
 </html>
