--- a/todoList/public/index.html
+++ b/todoList/public/index.html
@@ -7,9 +7,22 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
-  <title>Todo List App</title>
+<!-- Angular Material CSS now available via Google CDN; version 0.9.4 used here -->
+<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
+
+<title>Todo List App</title>
 </head>
-<body>
+<body ng-cloak>
+  <md-content>
+    <!-- Angular Material Dependencies -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+
+    <!-- Angular Material Javascript now available via Google CDN; version 0.9.4 used here -->
+    <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+
   <div class="container" ng-controller="AppCtrl">
 
     <!-- Page Header -->
@@ -27,24 +40,25 @@
   </div>
 
 
-  <div class="form-group row">
-    <div class="col-md-7">
-      <label class="sr-only" for="description">Todo Description</label>
-      <input type="text" class="form-control" name="description" placeholder="Enter todo description" ng-model="todo.description">
-    </div>
+  <div layout="row">
+        <md-input-container flex="50">
+          <label>Enter todo description</label>
+          <input name="description" ng-model="todo.description">
+        </md-input-container>
 
-    <div class="col-md-2">  
-      <label class="sr-only" for="date">Todo Date</label>
-      <input type="date" class="form-control" name="date" ng-model="todo.date">
-    </div>
+        <div class="col-md-2">  
+          <label class="sr-only" for="date">Todo Date</label>
+          <md-datepicker ng-model="todo.date" md-placeholder="Enter date" md-open-on-focus></md-datepicker>
+        </div>
 
-    <div class="col-md-3">  
-    <button class="btn btn-primary" ng-click="addTodo()">Add Todo</button>
-      <button class="btn btn-info" ng-click="update(todo.id)">Update</button>
-      <button class="btn btn-info" ng-click="deselect()">Clear</button>
-    </div>
+        <div class="col-md-4">  
+          <md-button class="md-raised md-primary" ng-click="addTodo()">Add Todo</md-button>
+          <md-button class="md-raised" ng-click="update(todo.id)">Update</md-button>
+          <md-button class="md-raised" ng-click="deselect()">Clear</md-button>
+        </div>
 
-  </div>
+  </div>      
+
 
 
   <div class="jumbotron" ng-if ="total == 0">
@@ -77,13 +91,13 @@
 
 
 
-          <button class="btn btn-warning" ng-if="todo.done" ng-click="markNotDone(todo._id)">Mark as Not Done</button>
+          <md-button class="md-raised md-warn" ng-if="todo.done" ng-click="markNotDone(todo._id)">Mark as Not Done</md-button>
 
-          <button class="btn btn-info" ng-if="!todo.done" ng-click="markDone(todo._id)">Mark as Done</button>
+          <md-button class="md-raised" ng-if="!todo.done" ng-click="markDone(todo._id)">Mark as Done</md-button>
 
-          <button class="btn btn-warning" ng-click="edit(todo._id)">Edit</button>
+          <md-button class="md-raised md-warn" ng-click="edit(todo._id)">Edit</md-button>
 
-          <button class="btn btn-danger" ng-click="remove(todo._id)">Remove</button>
+          <md-button class="md-accent md-raised md-hue-1" ng-click="remove(todo._id)">Remove</md-button>
 
 
         </td>
@@ -91,11 +105,10 @@
     </tbody>
   </table>
   
-
-
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
 <script src="controllers/controller.js"></script>
+</md-content>
 </body>
 
 </html>
